--- a/TP1/EntregaFinal/ToDo.txt
+++ b/TP1/EntregaFinal/ToDo.txt
@@ -2,3 +2,4 @@
  (que no se acumulen)
 - bug al cambiar color sin clickear lapiz
 - ocultar herramientas de dibujo al cargar imagen
+- conviene que los filtros sean tipo radio
